<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">qlock</string>
    <string name="pref_title">language</string>
    <string name="pref_default_language">EN</string>
    <string name="pref_color">color</string>
    <string name="pref_default_color">black</string>
    <string name="pref_font">font</string>
    <string name="pref_default_font">sans</string>
</resources>
