<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
            android:key="@string/pref_title"
            android:title="@string/pref_title"
            android:dialogTitle="@string/pref_title"
            android:entries="@array/pref_languages"
            android:entryValues="@array/pref_language_values"
            android:defaultValue="@string/pref_default_language"/>

    <ListPreference
            android:key="@string/pref_color"
            android:title="@string/pref_color"
            android:dialogTitle="@string/pref_color"
            android:entries="@array/pref_colors"
            android:entryValues="@array/pref_color_values"
            android:defaultValue="@string/pref_default_color"
            />

    <ListPreference
            android:key="@string/pref_font"
            android:title="@string/pref_font"
            android:dialogTitle="@string/pref_font"
            android:entries="@array/pref_fonts"
            android:entryValues="@array/pref_font_values"
            android:defaultValue="@string/pref_default_font"
            />
</PreferenceScreen>